traefik/traefik_service.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
  - protocol: TCP 
    name: websecure
    port: 443
    targetPort: 433
  - protocol: TCP
    name: dashboard
    port: 8080
    targetPort: 8080
